<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2020 CoviLights GbR
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">"CoviLights"</string>
    <string name="ble_not_supported">"Your phone does not support BluetoothLE"</string>
    <string name="cancel">"Cancel"</string>
    <string name="change">"Change"</string>

    <!-- @Patrick I don't think this is right. Needs proper tech background as well. -->
    <string name="main_allow_tracking">"Allow tracking of proximity using
Bluetooth"</string>
    <string name="main_change_status">"Change status"</string>
    <string name="main_change_status_calendar_dialog_title">"When did the symptoms start?"</string>
    <string name="main_change_status_dialog_text">"Typical symptoms include fever, shortness of breath, cough, and fatigue."</string>
    <string name="main_change_status_dialog_title">"Do you have symptoms?"</string>
    <string name="main_did_you_test_positive">"Did you test positive or were you exposed?"</string>
    <string name="main_grow_community">"Grow the community to keep all of us safe"</string>
    <string name="main_more_info">"What does this mean?"</string>
    <string name="main_notify_status_dialog_title">"Notify people?"</string>

    <!-- Fuzzy -->
    <string name="main_notify_status_exposed_with_symptoms_dialog_text">"Send a notification to the people you have encountered in the past 14 days to make sure they know they might be exposed.
Your identity won’t be revealed."</string>

    <!-- Fuzzy -->
    <string name="main_notify_status_exposed_without_symptoms_dialog_text">"Send a notification to the people you have encountered in the past 14 days to make sure they know they might be exposed.
Your identity won’t be revealed."</string>
    <string name="main_notify_status_positive_dialog_text">"Send a notification to the people you have encountered in the past 14 days to make sure they know they were exposed.
Your identity won’t be revealed."</string>
    <string name="main_share_app">"Share the app"</string>
    <string name="main_share_proximity">"Share proximity"</string>

    <!-- Fuzzy -->
    <string name="main_status_exposed_with_symptoms_details">"As you were exposed and have symptoms, we will prompt you every day to determine the length of your self-quarantine.
Contact your doctor if your symptoms are bad or get worse."</string>

    <!-- Fuzzy -->
    <string name="main_status_exposed_with_symptoms_subtitle">"Please self-quarantine for 4 days after the symptoms are gone."</string>

    <!-- Fuzzy -->
    <string name="main_status_exposed_with_symptoms_title">"You are a risk."</string>

    <!-- Fuzzy -->
    <string name="main_status_exposed_without_symptoms_details">"You estimated you were exposed on %1$s. The 14-day self-quarantine ends on %2$s.&lt;br /&gt;
We will prompt you every day to allow others to be notified in case symptoms arise."</string>

    <!-- Fuzzy -->
    <string name="main_status_exposed_without_symptoms_subtitle">"Please self-quarantine for&lt;br /&gt;&lt;u&gt;%1$d days&lt;/u&gt;"</string>

    <!-- Fuzzy -->
    <string name="main_status_exposed_without_symptoms_title">"You are at risk."</string>
    <string name="main_status_ok_subtitle">"Follow the recommendations of your local authorities."</string>
    <string name="main_status_ok_title">"You should be fine."</string>
    <string name="main_status_positive_details">"You tested positive on %1$s. We will prompt you each day for your symptoms to determine the length of your self-quarantine.&lt;br /&gt;
Contact your doctor if your symptoms are bad or get worse."</string>
    <string name="main_status_positive_subtitle">"Please self-quarantine for 4 days after symptoms are gone."</string>
    <string name="main_status_positive_title">"You tested positive."</string>
    <string name="next">"Next"</string>
    <string name="not_now">"Not now"</string>

    <!-- @minna: Similar issue here, "location infromation for tracking" ... also has this Big Brother element. For a draft in German I'm saying "to detect other CoviLights users" but will finetune further in the future. -->
    <string name="onboarding_permission_bluetooth_text">"CoviLights uses Bluetooth to detect proximity to other CoviLights users."</string>
    <string name="onboarding_permission_data_text">"The tracking data is anonymous and stored locally in your phone for 14 days."</string>
    <string name="onboarding_permission_exposure_text">"In case of exposure, the tracking data is used to determine who to notify."</string>
    <string name="onboarding_permission_required_snackbar">"CoviLights will not work without this permission"</string>
    <string name="onboarding_permission_required_snackbar_action">"Settings"</string>
    <string name="onboarding_permission_required_toast">"CoviLights can not work without this permission"</string>
    <string name="onboarding_permission_subtitle">"Protect yourself and those nearby"</string>
    <string name="onboarding_permission_title">"Stay safe"</string>
    <string name="onboarding_share_now_text"><![CDATA[<a href="https://play.google.com/store/apps/details?id=com.covilights">Share now</a> to grow the CoviLights community.]]></string>
    <string name="onboarding_share_subtitle">"Spread the app, not the virus."</string>
    <string name="onboarding_share_title">"Share this app"</string>
    <string name="onboarding_share_top_text">"To get the biggest value, this app should be used by as many people as possible."</string>
    <string name="onboarding_status_bottom_text"><![CDATA[If you don’t know your current status, answer the <a href="https://covapp.charite.de/">survey from Charité hospital</a> or a similar self-evaluation to get an estimate.]]></string>
    <string name="onboarding_status_dialog_radio_exposed">"I was exposed."</string>
    <string name="onboarding_status_dialog_radio_negative">"I am well."</string>
    <string name="onboarding_status_dialog_radio_positive">"I was tested positive."</string>
    <string name="onboarding_status_dialog_title">"Add status"</string>
    <string name="onboarding_status_green_text"><![CDATA[<font color=#02A675><b>Green</b></font> – you should be fine but follow hygiene and social distancing recommendations.]]></string>
    <string name="onboarding_status_red_text"><![CDATA[<font color=#E85151><b>Red</b></font> – you were tested positive.]]></string>
    <string name="onboarding_status_subtitle">"Based on your test results or on an estimate from self-evaluation tools"</string>
    <string name="onboarding_status_title">"Add your status"</string>
    <string name="onboarding_status_top_text">"The app shows your status with traffic lights:"</string>
    <string name="onboarding_status_yellow_text"><![CDATA[<font color=#F5B100><b>Yellow</b></font> – you have been exposed and should self-quarantine.]]></string>
    <string name="onboarding_welcome_subtitle">"Fight the spread of COVID-19"</string>

    <!-- @Minna: "Tracking your movements" can be a loaded term with respect to privacy. And, it's actually not what we are doing. We are logging which other CoviLights users you were near. Not sure how to say that nicely ... but I would avoid the notion of "we are watching where you go" -->
    <string name="onboarding_welcome_text">"CoviLights helps contain the spread of COVID-19 by tracking your movements and notifying you in case of exposure."</string>
    <string name="onboarding_welcome_title">"Welcome to CoviLights"</string>
    <string name="prev">"Previous"</string>
    <string name="send">"Send"</string>
    <string name="start">"Start"</string>
</resources>
