<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/main_fragment">

    <data>

        <variable
            name="viewmodel"
            type="com.covilights.view.main.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_large">

        <LinearLayout
            android:id="@+id/statusContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_status_ok"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_large"
            android:paddingTop="@dimen/space_xlarge"
            android:paddingEnd="@dimen/space_large"
            android:paddingBottom="@dimen/space_xlarge">

            <ImageView
                android:id="@+id/ivIconOk"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:src="@drawable/ic_status_ok" />

            <TextView
                android:id="@+id/tvStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/brand_white"
                tools:text="@string/onboarding_welcome_title" />

            <TextView
                android:id="@+id/tvStatusSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/brand_white"
                tools:text="@string/main_change_status" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/moreInfo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_status_ok_more_info">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_information"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/main_more_info"
                android:textAllCaps="true" />
        </FrameLayout>
    </LinearLayout>
</layout>
