<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/onboarding_fragment">

    <data>

        <variable
            name="viewmodel"
            type="com.covilights.view.onboarding.OnboardingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_small"
            android:paddingBottom="@dimen/space_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/space_small"
                android:src="@drawable/ic_bluetooth" />

            <TextView
                style="@style/AppTheme.TextView.Onboarding.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_permission_bluetooth_text"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_small"
            android:paddingBottom="@dimen/space_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/space_small"
                android:src="@drawable/ic_lock" />

            <TextView
                style="@style/AppTheme.TextView.Onboarding.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_permission_data_text"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_small"
            android:paddingBottom="@dimen/space_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/space_small"
                android:src="@drawable/ic_notify" />

            <TextView
                style="@style/AppTheme.TextView.Onboarding.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_permission_exposure_text"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>
    </LinearLayout>
</layout>
