<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2020 CoviLights GbR
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/main_fragment">

    <data>

        <variable
            name="viewmodel"
            type="com.covilights.view.main.MainContentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_normal">

            <ImageView
                android:id="@+id/change_status_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="26dp"
                android:background="@drawable/ic_circle"
                android:backgroundTint="@color/main_control_bg"
                android:padding="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_covidlights" />

            <TextView
                android:id="@+id/change_status_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:text="@string/main_change_status"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/change_status_icon"
                app:layout_constraintTop_toTopOf="@id/change_status_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/main_did_you_test_positive"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/text_button_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/change_status_title"
                app:layout_constraintTop_toBottomOf="@+id/change_status_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_normal">

            <ImageView
                android:id="@+id/share_proximity_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="26dp"
                android:background="@drawable/ic_circle"
                android:backgroundTint="@color/main_control_bg"
                android:padding="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_bluetooth_notify" />

            <TextView
                android:id="@+id/share_proximity_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:text="@string/main_share_proximity"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/text"
                app:layout_constraintEnd_toStartOf="@+id/share_proximity_switch"
                app:layout_constraintStart_toEndOf="@+id/share_proximity_icon"
                app:layout_constraintTop_toTopOf="@+id/share_proximity_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/main_allow_tracking"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/text_button_secondary"
                app:layout_constraintEnd_toStartOf="@+id/share_proximity_switch"
                app:layout_constraintStart_toStartOf="@+id/share_proximity_title"
                app:layout_constraintTop_toBottomOf="@+id/share_proximity_title" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/share_proximity_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_normal">

            <ImageView
                android:id="@+id/share_app_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="26dp"
                android:background="@drawable/ic_circle"
                android:backgroundTint="@color/main_control_bg"
                android:padding="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/share_app_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:text="@string/main_share_app"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/share_app_icon"
                app:layout_constraintTop_toTopOf="@+id/share_app_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/main_grow_community"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/text_button_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/share_app_title"
                app:layout_constraintTop_toBottomOf="@+id/share_app_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
